fix hamburger button position on smaller screens

--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@ img,
     border: solid black 1px;
 }
 
-
+.button-container {
+    width: auto;
+}
 
 
 
